fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 nav {
   display: inline-flex;
   align-items: center;
@@ -120,7 +122,7 @@ footer img {
   grid-column: 5 / span 2;
   grid-row: 1 / span 2;
   margin-left: -5px;
-  margin-right: 5px;
+  margin-right: 0;
 }
 
 #promo-four {
